# work-apps

./: README.md  git-blow.sh
concatenator-hs/: CHANGELOG.md  README.md  concatenator.cabal  package.yaml
concatenator-hs/app/: Main.hs
concatenator-hs/src/: CommandLine.hs  Concatenator.hs  FileManager.hs  Logger.hs  Utilities.hs
concatenator-hs/test/: Spec.hs
concatenator-ocaml/: .ocamlformat  dune-project
concatenator-ocaml/lib/: command_line.ml  command_line.mli  concatenator.ml  concatenator.mli  dune  file_manager.ml  file_manager.mli  utilities.ml  utilities.mli
concatenator-ocaml/test/: dune  test_concatenator.ml
concatenator-racket/: concatenator.rkt
csv-partial/: CHANGELOG.md  LICENSE  csv-partial.cabal  stack.yaml
csv-partial/app/: Main.hs  PartialCsv.hs
escape-quotes/: escape-quotes.cabal  stack.yaml
linkedlist/: linkedlist.gpr
linkedlist/src/: linkedlist.adb  linkedlist.ads  main.adb
linqpad/: 12bitparser.linq  closest_multiple.linq  cloud_watch.linq  decrypting_encrypting_certs.linq  get_insert_update_delete_statements.linq  ip_address_get.linq  load_balancer_starter.linq  packet_sender_tester.linq  print_bytes.linq  pubsubtest.linq
powershell/: git-gc-multiple-folders.ps1  git-prune-multiple-folders.ps1
prefix-css/: CHANGELOG.md  README.md  package.yaml  prefix-css.cabal
qr-wifi/: Cargo.toml
qr-wifi/src/: args.rs  main.rs  pdf.rs  qrcode.rs
remove-quotes/: CHANGELOG.md  LICENSE  remove-quotes.cabal
remove-quotes/app/: Main.hs
